edited files to only display supports made from user station

--- a/app/views/supports/index.html.erb
+++ b/app/views/supports/index.html.erb
@@ -20,7 +20,7 @@
 
   <tbody>
     <% @supports.each do |support| %>
-     <% if support.station == current_user.station || current_user.admin = true %>
+     <% if support.station == current_user.station || current_user.admin == true %> 
       <tr>
         <td><%= support.station %></td>
         <td><%= support.typeofsupport %></td>
