--- a/app/views/supports/_form.html.erb
+++ b/app/views/supports/_form.html.erb
@@ -1,3 +1,6 @@
+
+<div class="container">
+<div class="bg-faded p-4 my-4">
 <%= form_with(model: support, local: true) do |form| %>
   <% if support.errors.any? %>
     <div id="error_explanation">
@@ -40,3 +43,5 @@
     <%= form.submit %>
   </div>
 <% end %>
+</div>
+</div>
