--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -1,6 +1,13 @@
+<div class="container">
+<div class="bg-faded p-4 my-4">
+
 <h1>Editing Support</h1>
 
 <%= render 'form', support: @support %>
 
 <%= link_to 'Show', @support %> |
 <%= link_to 'Back', supports_path %>
+
+
+</div>
+</div>
