--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div class ="container">
+<div class ="bg-faded p-4 my-4">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -32,3 +34,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+
+</div>
+</div>
