--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -1,5 +1,11 @@
+<div class="container">
+<div class="bg-faded p-4 my-4">
+
 <h1>New Support</h1>
 
 <%= render 'form', support: @support %>
 
 <%= link_to 'Back', supports_path %>
+
+</div>
+</div>
