--- a/app/views/supports/show.html.erb
+++ b/app/views/supports/show.html.erb
@@ -1,4 +1,5 @@
-
+<div class="container">
+<div class ="bg-faded p-4 my-4">
 <p>
   <strong>Station:</strong>
   <%= @support.station %>
@@ -31,3 +32,7 @@
 
 <%= link_to 'Edit', edit_support_path(@support) %> |
 <%= link_to 'Back', supports_path %>
+
+
+</div>
+</div>
