--- a/app/views/toners/_form.html.erb
+++ b/app/views/toners/_form.html.erb
@@ -38,7 +38,7 @@
 
   <div class="field">
     <%= form.label :stationname %>
-    <%= form.text_field :stationname %>
+    <%= form.text_field :stationname, :value => current_user.station, :readonly => true %>
   </div>
 
   
