edited page to remove duplicate of proff dev

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -110,7 +110,7 @@
         <div class="col-lg-4 mb-4">
           <div class="card h-100">                                                                                                                                                              <h4 class="card-header" align="center">Proff. Development</h4>
             <div class="card-body">
-              <p class="card-text" align="center"><a href="../CustomsExcelCourse/index.php" target="_blank">Microsoft Excel Course</a></p>                                                      </div>
+              <p class="card-text" align="center"><a href="" target="_blank"></a></p>                                                      </div>
             <div class="card-footer">
               <a href="" target="_blank" class="btn btn-primary"></a>
             </div>
