edited excel course path as it was edited my mitake in last commit

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,7 +59,7 @@
           <div class="card h-100">
             <h4 class="card-header" align="center">Proff. Development</h4>
             <div class="card-body">
-             <p class="card-text" align="center"> <%= link_to 'Microsoft Excel Course', "http://customs.gov.bz/source/quiz_trade_1.php" %> </p>
+             <p class="card-text" align="center"> <%= link_to 'Microsoft Excel Course', pages_excel_path, target: :_blank %> </p>
             </div>
             <div class="card-footer">
               <a href="" target="_blank" class="btn btn-primary"></a>
@@ -100,7 +100,7 @@
           <div class="card h-100">
             <h4 class="card-header" align="center">Quizletts</h4>
             <div class="card-body">
-              <p class="card-text" align="center"><%= link_to 'Insert Link to Quizlett', "http://customs.gov.bz/source/quiz_trade_1.php" %> </p>
+              <p class="card-text" align="center"><%= link_to 'Insert Link to Quizlett', "http://customs.gov.bz/source/quiz_trade_1.php", target: :_blank %> </p>
             </div>
             <div class="card-footer">
               <a href="" target ="_blank" class="btn btn-primary"></a>
