edited home file to include Admin link

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,7 @@
 
 
 <br><br>
+<%= link_to 'Administration', "http://cusbulletin.herokuapp.com/admin" %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <%= link_to 'Edit User Information', edit_user_registration_path %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <% else %>
